src/objects/Risk__c.object
<CustomObject>
    <fields>
        <fullName>Mean_Target_Likelihood__c</fullName>
        <description>The mean (Expected) Likelihood level that the organization wants to achieve, but is not there yet.</description>
        <inlineHelpText>Enter/select the expected value from the scale. This is the Risk Level that should exist.
1 = Rare &gt;1:100 Years
2 = Once in 100 years
3 = Once in 10 years
4 = Once a year 
5 = Frequent - 10 times a year</inlineHelpText>
        <label>Mean Target Likelihood</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Current_Impact_Decimal__c</fullName>
        <label>Minimum Current Impact Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Current_Likelihood_Decimal__c</fullName>
        <label>Minimum Current Likelihood Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Inherent_Impact_Decimal__c</fullName>
        <label>Minimum Inherent Impact Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Inherent_Impact_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Minimum_Inherent_Impact_Decimal__c)),Minimum_Inherent_Impact_Decimal__c,
VALUE(TEXT(Minimum_Inherent_Impact__c)))</formula>
        <label>Minimum Inherent Impact Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Inherent_Impact__c</fullName>
        <description>The least expected impact should the risk event occur, and there are no controls in place or they do not work as expected.</description>
        <inlineHelpText>Enter/select the appropriate value from the scale. This value is as if no Controls will work.
1 = Minimal - Less than $100,000 per event
2 = Between $100K and $1M
3 = Between $1M and $10M
4 = Between $10M and $100M
5 = Greater than $100M</inlineHelpText>
        <label>Minimum Inherent Impact</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Inherent_Likelihood_Decimal__c</fullName>
        <label>Minimum Inherent Likelihood Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Inherent_Likelihood_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Minimum_Inherent_Likelihood_Decimal__c)),Minimum_Inherent_Likelihood_Decimal__c,
VALUE(TEXT(Minimum_Inherent_Likelihood__c)))</formula>
        <label>Minimum Inherent Likelihood Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Inherent_Likelihood__c</fullName>
        <description>The lowest (least) Likelihood that the risk event will occur, assuming no controls are in place.</description>
        <inlineHelpText>Enter/select the appropriate value from the scale. This value is as if no Controls will work.
1 = Rare &gt;1:100 Years
2 = Once in 100 years
3 = Once in 10 years
4 = Once a year 
5 = Frequent - 10 times a year</inlineHelpText>
        <label>Minimum Inherent Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Residual_Impact_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Minimum_Current_Impact_Decimal__c)),Minimum_Current_Impact_Decimal__c,
VALUE(TEXT(Minimum_Residual_or_Current_Impact__c)))</formula>
        <label>Minimum Residual Impact Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Residual_Likelihood_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Minimum_Current_Likelihood_Decimal__c)),Minimum_Current_Likelihood_Decimal__c,
VALUE(TEXT(Minimum_Residual_or_Current_Likelihood__c)))</formula>
        <label>Minimum Residual Likelihood Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Residual_or_Current_Impact__c</fullName>
        <description>Lowest Impact level that is expected assuming current controls works as expected.</description>
        <inlineHelpText>Enter/select the appropriate value from the scale - Assume existing Controls will work as expected.
1 = Minimal - Less than $100,000 per event
2 = Between $100K and $1M
3 = Between $1M and $10M
4 = Between $10M and $100M
5 = Greater than $100M</inlineHelpText>
        <label>Minimum Residual or Current Impact</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Residual_or_Current_Likelihood__c</fullName>
        <description>Lowest expected Likelihood (i.e. lowest score)  the risk event will occur, assuming existing controls work as expected.</description>
        <inlineHelpText>Enter/select the appropriate value from the scale. Assume existing Controls will work as expected.
1 = Rare &gt;1:100 Years
2 = Once in 100 years
3 = Once in 10 years
4 = Once a year 
5 = Frequent - 10 times a year</inlineHelpText>
        <label>Minimum Residual or Current Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Target_Impact_Decimal__c</fullName>
        <label>Minimum Target Impact Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Target_Impact_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Minimum_Target_Impact_Decimal__c)),Minimum_Target_Impact_Decimal__c,
VALUE(TEXT(Minimum_Target_Impact__c)))</formula>
        <label>Minimum Target Impact Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Target_Impact__c</fullName>
        <description>The lowest Target Impact score that the Risk event should be at.</description>
        <inlineHelpText>Enter/select the expected value from the scale. This is the Risk Level that should exist.
1 = Minimal - Less than $100,000 per event
2 = Between $100K and $1M
3 = Between $1M and $10M
4 = Between $10M and $100M
5 = Greater than $100M</inlineHelpText>
        <label>Minimum Target Impact</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Target_Likelihood_Decimal__c</fullName>
        <label>Minimum Target Likelihood Decimal</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Target_Likelihood_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(Minimum_Target_Likelihood_Decimal__c)),Minimum_Target_Likelihood_Decimal__c,
VALUE(TEXT(Minimum_Target_Likelihood__c)))</formula>
        <label>Minimum Target Likelihood Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Target_Likelihood__c</fullName>
        <description>The lowest Likelihood score that the risk event should have.</description>
        <inlineHelpText>Enter/select the expected value from the scale. This is the Risk Level that should exist.
1 = Rare &gt;1:100 Years
2 = Once in 100 years
3 = Once in 10 years
4 = Once a year 
5 = Frequent - 10 times a year</inlineHelpText>
        <label>Minimum Target Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Controls__c</fullName>
        <label>Number of Controls</label>
        <summaryForeignKey>Risk_Controls_Association__c.Risk__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Observations__c</fullName>
        <label>Number of Observations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Making_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person from Contacts list who is making any changes to this risk</description>
        <inlineHelpText>Select name from Contacts list of person making changes.</inlineHelpText>
        <label>Person Making Change</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Risks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAC1__c</fullName>
        <description>Current</description>
        <inlineHelpText>Current</inlineHelpText>
        <label>Risk Appetite (Operations)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAC2__c</fullName>
        <description>Current</description>
        <inlineHelpText>Current</inlineHelpText>
        <label>Risk Appetite (Solutions Delivery)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAC3__c</fullName>
        <description>Current</description>
        <inlineHelpText>Current</inlineHelpText>
        <label>Risk Appetite (Project Management)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAT1__c</fullName>
        <description>Target</description>
        <inlineHelpText>Target</inlineHelpText>
        <label>Risk Appetite (Operations)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAT2__c</fullName>
        <description>Target</description>
        <inlineHelpText>Target</inlineHelpText>
        <label>Risk Appetite (Solutions Delivery)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAT3__c</fullName>
        <description>Target</description>
        <inlineHelpText>Target</inlineHelpText>
        <label>Risk Appetite (Project Management)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI_Score_for_Controls__c</fullName>
        <description>Calculated field that will indicate if the existing controls are providing ;value for money&quot;. This is a very broad evaluation and depends on the accuracy of the values entered throughout the system. It will help to prioritize the controls that should be  further evaluated for cost effectiveness.</description>
        <inlineHelpText>Return on Investment on Existing controls.</inlineHelpText>
        <label>ROI Score for Controls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reduction_in_Risk_Score__c</fullName>
        <formula>Inherent_Risk_Score__c - Current_Risk_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reduction in Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residual_Consequences__c</fullName>
        <inlineHelpText>Describe the impact should the risk event occur and the related controls work as expected.</inlineHelpText>
        <label>Residual Consequences</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Appetite_Chart__c</fullName>
        <formula>IMAGE(&quot;http://chart.googleapis.com/chart?chxl=0:|Operations|Solutions+Delivery|Project+Management|Security|Strategy+Planning|Enterprise+Decision+Solutions|1:|0|1|2|3|4|5&amp;chxp=1,0,1,2,3,4,5&amp;chxr=0,1,6|1,0,5&amp;chxs=0,676767,10,0,lt,676767&amp;chxtc=0,1|1,100&amp;chxt=x,y&amp;chs=650x460&amp;cht=r&amp;chco=DA5454,76A4FB&amp;chds=0,5,0,5&amp;chd=t:&quot;

+ TEXT(RAC1__c) + &quot;,&quot;
+ TEXT(RAC2__c) + &quot;,&quot;
+ TEXT(RAC3__c) + &quot;,&quot;
+ TEXT(RAC4__c) + &quot;,&quot;
+ TEXT(RAC5__c) + &quot;,&quot;
+ TEXT(RAC6__c) + &quot;,&quot;
+ TEXT(RAC1__c) + &quot;|&quot;
+ TEXT(RAT1__c) + &quot;,&quot;
+ TEXT(RAT2__c) + &quot;,&quot;
+ TEXT(RAT3__c) + &quot;,&quot;
+ TEXT(RAT4__c) + &quot;,&quot;
+ TEXT(RAT5__c) + &quot;,&quot;
+ TEXT(RAT6__c) + &quot;,&quot;
+ TEXT(RAT1__c)

+ &quot;&amp;chdl=Target+Estimate|Current+Estimate&amp;chls=3|3&amp;chma=|10,10&amp;chm=s,DA2222,0,-1,9|s,3072F3,1,-1,9&amp;chtt=Risk+Appetite&amp;chts=676767,16&quot; , &quot;No Image Available&quot;, 460, 650)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Appetite Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Appetite__c</fullName>
        <description>Users assessment of the acceptability of the current risk levels - By selecting one of the options the evaluation can be compared with others to ensure a consistent approach to the level of risks the organization is facing,</description>
        <inlineHelpText>Risk Owner selects the most appropriate descriptor from the drop down list. This may differ from a calculated risk appetite. It is the Risk Owner&apos;s opinion for this specific risk.</inlineHelpText>
        <label>Risk Appetite</label>
        <picklist>
            <picklistValues>
                <fullName>Too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <label>Risk Category</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Clockspeed__c</fullName>
        <description>Assessment of the speed at which the risk could eventuate. The slower the risk speed, the more time the organization has to respond. This may affect the types of controls to be used.</description>
        <inlineHelpText>Select the most appropriate option from the drop down list that describes your expectation of how fast this risk will occur.</inlineHelpText>
        <label>Risk Clockspeed</label>
        <picklist>
            <picklistValues>
                <fullName>Very Fast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Slow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Description__c</fullName>
        <description>Description of the risk event.</description>
        <inlineHelpText>Enter a description of the risks sufficient to provide the reader with a clear understanding of the scope of the risk.  Limited to 100 characters - more detail can be added in Risk Detail</inlineHelpText>
        <label>Risk Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Detail__c</fullName>
        <description>Longest description of a Risk. Use as much detail as appropriate to provide a comprehensive description of the risk that could be used in a report generated by the system. If very long then consider using an attachment to the risk record.</description>
        <inlineHelpText>Provide a detailed description of the risk event. If neccessary attach documents to fully describe.</inlineHelpText>
        <label>Risk Detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Direction__c</fullName>
        <description>Risk Owner&apos;s assessment of direction of the Current Risk Score. This is where the Risk Score is expected to be heading not where it has changed in the past.</description>
        <inlineHelpText>Select from the drop down.  This is where the Risk Score is expected to be heading not where it has changed in the past.

All risks with &quot;Rising&quot; or &quot;Rising Steeply&quot; will be reported in the Emerging Risk report.</inlineHelpText>
        <label>Risk Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Rising Steeply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declining Steeply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Metrics_Chart__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?chxl=0:|0|1|2|3|4|5|1:|Inherent|Current|Target&amp;chxp=0,0,1,2,3,4,5&amp;chxr=0,0,5|1,0,95&amp;chxs=1,676767,11.5,0.5,l,676767&amp;chxt=y,x&amp;chbh=a,8,20&amp;chs=350x200&amp;cht=bvg&amp;chco=3072F3,3D7930&amp;chds=0,5,0,5&amp;chd=t:&quot;

+ TEXT(Expected_Inherent_Likelihood_Number__c) + &quot;,&quot; 
+ TEXT(Expected_Residual_Likelihood_Number__c) + &quot;,&quot; 
+ TEXT(Expected_Target_Likelihood_Number__c) + &quot;|&quot; 
+ TEXT(Expected_Inherent_Impact_Number__c) + &quot;,&quot; 
+ TEXT(Expected_Residual_Impact_Number__c) + &quot;,&quot; 
+ TEXT(Expected_Target_Impact_Number__c) 

+ &quot;&amp;chdl=Likelihood|Impact&amp;chg=33,20,0,0&amp;chma=|5&amp;chtt=Likelihood+and+Impact&amp;chts=676767,12&quot;, &quot;No Image Available&quot;, 200, 350)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Metrics Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Metrics__c</fullName>
        <description>Enables user to select the type of metrics they will use to describe the risk. default is to Expected Impact and Likelihood, but other options available.</description>
        <inlineHelpText>Select the most appropriate descriptors for the Impact and Likelihood values to be entered. By default this is the Expected value, but there are options if you have some indication on the potential variance around the expected value.</inlineHelpText>
        <label>Risk Metrics</label>
        <picklist>
            <picklistValues>
                <fullName>Expected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triangular</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Number__c</fullName>
        <label>Risk Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who has responsibility for this risk. This person will determine the current risk level.</description>
        <inlineHelpText>Select the appropriate Risk Owner from the list provided. Must be in Contacts. Only a single Risk Owner can be selected.</inlineHelpText>
        <label>Risk Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Score_Chart__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?chxr=1,0,25&amp;chxs=0,676767,0&amp;chxt=x,y&amp;chs=350x200&amp;cht=gm&amp;chco=4561FF,9246FF,D62C5F,008000|FFDF00|D60000&amp;chds=0,25,0,25,0,25&amp;chd=t:&quot; 

+ TEXT(Target_Risk_Score__c) + &quot;|&quot; 
+ TEXT(Current_Risk_Score__c) + &quot;|&quot; 
+ TEXT(Inherent_Risk_Score__c) 

+ &quot;&amp;chdl=Target|Current|Inherent&amp;chma=0,100,0,20|10,5&amp;chtt=Risk+Score&amp;chts=676767,14&quot;, &quot;No Image Available&quot;, 200, 350)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Score Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Status__c</fullName>
        <description>Classification of risks enable focus on relevant risks for the current user. Emerging risks are ones that need to be evaluated further. Particular attention should be applied to Emerging Risks that tagged as having a very fast Speed to onset as they may develop quicker than the organization can implement appropriate controls.</description>
        <inlineHelpText>Select from available options.  Emerging Risk should be used for risks that are just becoming known. Retired risks are ones that no longer exist - for example while the Y2K computer issue was an emerging risk in the 1990s, after 2000 it would be retired.</inlineHelpText>
        <label>Risk Status</label>
        <picklist>
            <picklistValues>
                <fullName>Emerging Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Volatility__c</fullName>
        <description>Estimate of how volatile the risk is - in other words, an additional characteristic to evaluate a risk when good data is not available. The higher the score, the higher the volatility in the risk score.</description>
        <inlineHelpText>1 = Very stable risk, doesn&apos;t change much ever, 
2 = Some changes but not substantial, 
3 = One of the measures (Impact or Likelihood) may change often, 
4 = Big changes occur in both I&amp;L
5 = Extremely volatile - changing by large amounts frequently.</inlineHelpText>
        <label>Risk Volatility</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_or_Opportunity__c</fullName>
        <formula>IMAGE( 
IF(CONTAINS(RecordType.Name, &quot;Opportunity&quot;)
, &quot;/resource/optyimg&quot; 
, &quot;/resource/riskimg&quot;), &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Risks have a negative impact on an organization&apos;s objectives.  Opportunities have a positive impact.</inlineHelpText>
        <label>Risk or Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Deviation_Current_Impact__c</fullName>
        <description>Used where Normal Distribution is selected for risk metrics.</description>
        <label>Standard Deviation Current Impact</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Deviation_Current_Likelihood__c</fullName>
        <label>Standard Deviation Current Likelihood</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Deviation_Inherent_Impact__c</fullName>
        <description>Used where Normal Distribution is selected for risk metrics</description>
        <label>Standard Deviation Inherent Impact</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Deviation_Inherent_Likelihood__c</fullName>
        <description>Used where Normal Distribution is selected for risk metrics</description>
        <label>Standard Deviation Inherent Likelihood</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Deviation_Target_Impact__c</fullName>
        <inlineHelpText>Used where Normal Distribution is selected for risk metrics</inlineHelpText>
        <label>Standard Deviation Target Impact</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Deviation_Target_Likelihood__c</fullName>
        <inlineHelpText>Used where Normal Distribution is selected for risk metrics</inlineHelpText>
        <label>Standard Deviation Target Likelihood</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <description>Supervisor of Risk Owner. Used to escalate issues, provide approvals for certain changes. If Risk Owner is removed from Contacts, all records attached to the Risk Owner are assigned to the Supervisor</description>
        <formula>Risk_Owner__r.ReportsTo.FirstName  &amp; &quot; &quot;  &amp; Risk_Owner__r.ReportsTo.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatic population from Contacts.</inlineHelpText>
        <label>Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Risk_Score__c</fullName>
        <description>Expected Target Risk Score (Expected Target Impact * Expected Target Likelihood)</description>
        <formula>IF((NOT(ISBLANK(Expected_Target_Likelihood_Number__c)) || NOT(ISBLANK(Expected_Target_Impact_Number__c))),(Expected_Target_Likelihood_Number__c  *  Expected_Target_Impact_Number__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Target Impact * Target Likelihood. This is the Risk Score that, in the opinion of the Risk Owner, is the optimal score for this risk. It may be higher or lower than the current risk score.</inlineHelpText>
        <label>Target Risk Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designated as a Top Risk, regardless of Risk scores. Typically describes a risk that is monitored directly by senior executives or board members.</description>
        <inlineHelpText>Check this box if this risk, regardless of the risk scores, is a risk that should be under ongoing review by senior management.</inlineHelpText>
        <label>Top Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X10_K_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Risk recorded in the organizations 10-K or equivalent Annual Report?</description>
        <inlineHelpText>The recording/communication of Risks in the 10-K or Annual Report is an effective and efficient method to inform stakeholders, such as investors, of the potential risks to the viability of the organization.</inlineHelpText>
        <label>10-K  Risk</label>
        <type>Checkbox</type>
    </fields>
    <label>2012 ERM Risks</label>
    <listViews>
        <fullName>All_Risks</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Risk__c.Expected,Risk__c.Normal,Risk__c.Risk,Risk__c.Triangular</value>
        </filters>
        <label>All Risks</label>
    </listViews>
    <nameField>
        <label>Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>2012 ERM Risks</pluralLabel>
    <recordTypes>
        <fullName>Binomial</fullName>
        <active>true</active>
        <label>Risk - Binomial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Emerging_Risk</fullName>
        <active>true</active>
        <description>to hold Emerging Risks for review before they are graduated to Risks</description>
        <label>Emerging Risk</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expected</fullName>
        <active>true</active>
        <label>Risk - Expected</label>
    </recordTypes>
    <recordTypes>
        <fullName>Normal</fullName>
        <active>true</active>
        <label>Risk - Normal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Expected</fullName>
        <active>true</active>
        <label>Opportunity - Expected</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Normal</fullName>
        <active>true</active>
        <label>Opportunity - Normal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Triangular</fullName>
        <active>true</active>
        <label>Opportunity - Triangular</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <label>Risk</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk_Profile</fullName>
        <active>true</active>
        <description>A risk profile is a written description of a set of risks. A risk profile can include the risks that the entire organization must manage or only those that a particular function or part of the organization must address.</description>
        <label>Risk Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Triangular</fullName>
        <active>true</active>
        <label>Risk - Triangular</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Clearly_Defined_Explanation</fullName>
        <active>true</active>
        <errorConditionFormula>if( TEXT(Clearly_Defined__c )=&quot;No&quot;,ISBLANK(Explain__c),1=2)</errorConditionFormula>
        <errorDisplayField>Explain__c</errorDisplayField>
        <errorMessage>If the risk is not clearly defined, you must offer an explanation.</errorMessage>
    </validationRules>
</CustomObject>